# agent-harness-experiments

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  queue.md
.claude/agents/: research-scout.md  skill-scout.md
.claude/commands/: scout-research.md  scout-skills.md  test-paper.md
.claude/scout/: sources.yaml
experiments/2026-06-agent-harness/: config.intervention.yaml  config.smoke.yaml  config.yaml  intervention.py  notes.md
experiments/2026-06-agent-harness-stress/: config.intervention.yaml  config.yaml  intervention.py  notes.md
experiments/2026-06-agent-harness-stress/task/: features.yaml
experiments/2026-06-agent-harness/task/: features.yaml
experiments/2026-06-db-harness/: config.calib.yaml  config.yaml  notes.md  results.csv  run_sweep.py
experiments/2026-06-db-harness/task/: contract.md  features.yaml
experiments/2026-07-tokenpilot/: config.intervention.yaml  config.vanilla_nocache.yaml  config.yaml  intervention.py  notes.md  tasks.py
experiments/2026-07-tokenpilot/results/: stress_reduction.json
experiments/example-lr-sweep/: config.intervention.yaml  config.yaml  intervention.py  notes.md
shared/: __init__.py  _db_reference.py  agent.py  agent_eval.py  agent_eval_db.py  modal_runner.py  runner.py  seeds.py
shared/eval/: __init__.py
shared/models/: __init__.py
