[project]
name = "ml-experiments"
version = "0.1.0"
description = "Monorepo for running reproducible ML/LLM research experiments"
requires-python = ">=3.10"

# Exact pins so an experiment run is reproducible from the manifest alone.
# These versions are also what the Modal image is built from (see shared/modal_runner.py).
dependencies = [
    "torch==2.12.0",
    "numpy==1.26.4",
    "pyyaml==6.0.2",
    "modal==1.5.0",
    "anthropic==0.92.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared"]
